--- a/templates/admin_create_account.html
+++ b/templates/admin_create_account.html
@@ -21,7 +21,7 @@
     <main class="sign-up-main">
         <section class="sign-up-section">
             <h1>CREATE NEW ACCOUNT</h1>
-            <form action="{{ url_for('signup') }}" method="post">
+            <form action="{{ url_for('admin_create_account') }}" method="post">
                 <label for="name">Name *</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email *</label>
@@ -38,6 +38,9 @@
                 </select>
                 <button type="submit" class="sign-up-button">SIGN UP</button>
             </form>
+            {% if message %}
+                <p>{{ message }}</p>
+            {% endif %}
         </section>
     </main>
 </body>
