--- a/templates/signin.html
+++ b/templates/signin.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+        <a href="{{ url_for('home') }}">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+        </a></li>
         <nav>
             <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('signin') }}">Sign in</a></li>
-                <li><a href="#">Notice</a></li>
-                <li><a href="#">About</a></li>
                 <li><a href="{{ url_for('signup') }}">Sign up</a></li>
             </ul>
         </nav>
