report and autherize account

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -18,7 +18,8 @@
                 <li><a href="{{ url_for('admin_dashboard') }}">Home page</a></li>
                 <li><a href="{{ url_for('admin_view_account') }}">View account</a></li>
                 <li><a href="{{ url_for('admin_report') }}">Report</a></li>
-                <li><a href="{{ url_for('admin_create_account') }}">Create account</a></li>
+                <li><a href="{{ url_for('admin_authorize_teacher_account') }}">Create account</a></li>
+                <li><a href="{{ url_for('admin_create_notification') }}">Create notification/a></li>
             </ul>
         </nav>
         <img src="{{ url_for('static', filename='images/admin.png') }}" alt="Admin Icon" class="admin">
