--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+        <a href="{{ url_for('home') }}">
+            <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Bilinguo Logo" class="logo">
+        </a></li>
         <nav>
             <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('signin') }}">Sign in</a></li>
-                <li><a href="#">Notice</a></li>
-                <li><a href="#">About</a></li>
                 <li><a href="{{ url_for('signup') }}">Sign up</a></li>
             </ul>
         </nav>
@@ -30,19 +29,13 @@
             <h2>Anyone can practise with our free resources</h2>
             <div class="resource-grid">
                 <div class="grid-item">
-                    <a href="{{ url_for('dictionary') }}">
                         <img src="{{ url_for('static', filename='images/dictionary.png') }}" alt="Dictionary">
-                    </a>
                 </div>
                 <div class="grid-item">
-                    <a href="{{ url_for('flashcards') }}">
                         <img src="{{ url_for('static', filename='images/flashcards.png') }}" alt="Flashcards">
-                    </a>
                 </div>
                 <div class="grid-item">
-                    <a href="{{ url_for('mocktests') }}">
                         <img src="{{ url_for('static', filename='images/mocktests.png') }}" alt="Mock tests">
-                    </a>
                 </div>
             </div>
         </section>
